Add styling to the content of the form element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="scoreBoard"><span class="user-score">0</span> / <span class="question-number">0</span></div>
         <form id="quiz-form">
-            <h1>Q: <span class="question">This is a question</span></h1>
+            <h2>Q: <span class="question">This is a question</span></h2>
             <div class="all-options">
                 <div class="option">
                     <input type="radio" id="option1" value="1" name="quiz">
@@ -37,7 +37,7 @@
                     <label for="option4">This is option 3</label>
                 </div>
                 <div class="buttons">
-                    <button type="submit">Sumbmit</button>
+                    <button type="submit">Submit</button>
                 </div>
             </div>
         </form>
