Declared all the constants needed to implement the necessary functions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </section>
 <section>
     <div class="container">
-        <div class="scoreBoard"><span class="user-score">0</span> / <span class="question-number">0</span></div>
+        <div class="scoreBoard"><span class="user-score">0</span> / <span class="question-answered">0</span></div>
         <form id="quiz-form">
             <h2>Q: <span class="question">This is a question</span></h2>
             <div class="all-options">
@@ -36,9 +36,9 @@
                     <input type="radio" id="option4" value="1" name="quiz">
                     <label for="option4">This is option 3</label>
                 </div>
-                <div class="buttons">
-                    <button type="submit">Submit</button>
-                </div>
+            </div>
+            <div class="buttons">
+                <button type="submit">Submit</button>
             </div>
         </form>
     </div>
