--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#317EFB"/>
 
     <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/stlye.css">
-    <link rel="stylesheet" href="">
     <title>Guess the Capital</title>
 </head>
 <body>
-<section>
-    <h1>Guess the Capital</h1>
-</section>
+    <section>
+
+    </section>
 <section>
     <div class="container">
         <div class="scoreBoard"><span class="user-score">0</span> / <span class="question-answered">0</span></div>
